--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,14 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    //最小版本
+    minSdkVersion = 15
+    //编译版本
+    compileSdkVersion = 29
+    //目标版本
+    targetSdkVersion = 29
+    //V7版本
+    buildToolsVersion = "29.0.2"
+}
