--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -58,5 +59,8 @@ dependencies {
 
     //    viewPager indicator,https://github.com/ongakuer/CircleIndicator
     implementation 'me.relex:circleindicator:2.1.4'
+
+    //    apache common lang3
+    implementation 'org.apache.commons:commons-lang3:3.0'
 
 }
