--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.SettingsActivity"
-            android:label="@string/settings"/>
+        <activity android:name=".activity.UserDetailActivity"></activity>
+        <activity
+            android:name=".activity.SettingsActivity"
+            android:label="@string/settings" />
         <activity
             android:name=".activity.RegisterActivity"
             android:label="@string/phone_register"
@@ -31,7 +33,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity.LoginActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity.GuideActivity"
             android:theme="@style/AppTheme.NoActionBar.Fullscreen" />
