--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,4 +88,7 @@ dependencies {
     //    event bus
     implementation 'org.greenrobot:eventbus:3.1.1'
 
+//    MagicIndicator
+    implementation 'com.github.hackware1993:MagicIndicator:1.5.0'
+
 }
