--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,7 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.1.1'
 
 //    MagicIndicator
-    implementation 'com.github.hackware1993:MagicIndicator:1.5.0'
+//    implementation 'com.github.hackware1993:MagicIndicator:1.6.0'
+    implementation project(':magicindicator')
 
 }
