--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.UserDetailActivity"></activity>
+        <activity android:name=".activity.BaseWebViewActivity"
+            android:label="详情"/>
+        <activity android:name=".activity.UserDetailActivity" />
         <activity
             android:name=".activity.SettingsActivity"
             android:label="@string/settings" />
