--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.ListDetailActivity"
-            android:label="歌单详情"/>
+        <activity android:name=".activity.MusicPlayerActivity"></activity>
+        <activity
+            android:name=".activity.ListDetailActivity"
+            android:label="歌单详情" />
         <activity
             android:name=".activity.BaseWebViewActivity"
             android:label="详情" />
