--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
 //glide
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+    implementation 'jp.wasabeef:glide-transformations:+'
 
     //    viewPager indicator,https://github.com/ongakuer/CircleIndicator
     implementation 'me.relex:circleindicator:2.1.4'
